--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <h3 class="text-muted">Yeoman Test</h3>
+        <h3 class="text-muted">Yeoman Test #1</h3>
       </div>
 
       <div class="jumbotron">
